Fri Feb 21 16:45:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (next_rotate_time, previous_period_end): consider
	  DST change.

	* lib/logger.rb (Logger::LogDevice#check_shift_log): compare the
	  current time with the time for the next rotation to fix rotation
	  miss when date changed between the comparison and log writing.
	  based on the patch by megayu <yuhg2310 AT gmail.com>.
	  [Fixes GH-539]

Fri Feb 21 10:39:33 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	*  test/monitor/test_monitor.rb: remove unused variables.
	*  test/resolv/test_dns.rb: ditto.
	*  test/rexml/test_functions.rb: ditto.
	*  test/rss/test_setup_maker_itunes.rb: ditto.

Fri Feb 21 09:48:56 2014  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): only retry on error
	  (bsock_recvmsg_internal): ditto
	* test/socket/test_unix.rb: test above for infinite loop

Fri Feb 21 08:27:19 2014  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h (RB_GC_GUARD):
	  use rb_gc_guarded_ptr_val on non-GCC/MSC
	* gc.c (rb_gc_guarded_ptr_val): rename and adjust argument.
	  RB_GC_GUARD should be robust enough for any compiler.
	  [ruby-core:60816] [Bug #7805]

Thu Feb 20 22:21:26 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (numeric_getaddrinfo): Use xcalloc.
	  Suggested by Eric Wong.
	  https://bugs.ruby-lang.org/issues/9525#note-14

Thu Feb 20 11:21:13 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_flatten): fix behavior of flatten(-1).
	  [ruby-dev:47988] [Bug #9533]

	* test/ruby/test_array.rb: test for above.

Wed Feb 19 18:57:02 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Bypass getaddrinfo() if node and serv are numeric.
	  Reporeted by Naotoshi Seo.  [ruby-core:60801] [Bug #9525]

	* ext/socket/extconf.rb: Detect struct sockaddr_in6.sin6_len.

	* ext/socket/sockport.h (SET_SIN6_LEN): New macro.
	  (INIT_SOCKADDR_IN6): Ditto.

	* ext/socket/rubysocket.h (struct rb_addrinfo): Add
	  allocated_by_malloc field.